src/objects/AvailableServiceItem__c.object
<CustomObject>
    <fields>
        <fullName>AvailableBundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Available Bundle</label>
        <referenceTo>AvailableBundle__c</referenceTo>
        <relationshipLabel>Available Service Items</relationshipLabel>
        <relationshipName>AvailableServiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BundleItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Item</label>
        <referenceTo>BundleItem__c</referenceTo>
        <relationshipLabel>Available Service Items</relationshipLabel>
        <relationshipName>AvailableServiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceItemType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Item Type</label>
        <referenceTo>ServiceItemType__c</referenceTo>
        <relationshipLabel>Available Service Items</relationshipLabel>
        <relationshipName>AvailableServiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Available Service Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Available Service Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Service Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>